frontend/web/rainmaker/dev-packages/pt-employee-dev/src/Screens/FormWizardDataEntry/components/WizardComponent/index.scss
.wizard-cont {
  padding: 0 16px 90px 16px;
  min-height: calc(100vh - 64px);
  clear: both;
}

.wizard-footer {
  background-color: #ffffff;
  box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.24);
  position: fixed !important;
  bottom: 0;
  left: 0;
  width: 100vw;
  z-index: 1000;
}

.breadcrumb-tab {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
}

.breadcrumb-form {
  display: flex !important;
  .pt-owner-info {
    .pt-ownerinfo-title {
      margin-left: 23px;
    }
    .owner-details-form {
      display: flex;
      .name-address {
        padding: 5px 352px 0 30px;
        .textfield {
          width: 145% !important;
        }
        .dropdown {
          display: block !important;
        }
      }
      .relationship-details {
        display: flex;
        div:nth-of-type(1) {
          margin-right: 35px;
        }
      }
    }
  }
}

.breadcrumb {
  padding: 0;
}
@media only screen and (max-width:768px){
  .MuiStep-alternativeLabel-35{
    width: calc(100% - (52px * 5)) !important;
   }
   .MuiStepConnector-alternativeLabel-88 {
     width: 50% !important;
   }
}
@media only screen and (max-width: 551px)
{
.stepper-test
  {
    padding-left: 1px !important;
    padding-right: 1px !important;
    flex: auto !important;
  }
}

